app/assets/stylesheets/elements/_section-title.scss
.section-title {
  font-size: rem(17px);
  color: #868686;
  width: 100%;
  margin: rem(32px) 0 rem(20px);
  @include display(flex);
  @include align-items(center);

  &.mobile {
    text-transform: uppercase;
    font-size: rem(14px);
    font-weight: 500;
    text-align: center;
  }

  @include mobile {
    background: $dark-grey;
    color: $white;
    @include justify-content(center);
    padding: rem(12px) 0;
    margin: rem(30px) 0 rem(15px);
  }

  &:after {
    content: '';
    height: 1px;
    @include flex(1);
    background: #E0E0E0;
    margin-left: rem(20px);

    @include mobile {
      display: none;
    }
  }
}

